--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,8 @@
 ---
 
 @import "{{ site.theme }}";
+btn-nav { text-decoration: none; display: inline-block; padding: 8px 16px; }
+btn-nav:hover { background-color: #ddd; color: black; } 
+.previous { background-color: #f1f1f1; color: black; } 
+.next { background-color: #4CAF50; color: white; } 
+.round { border-radius: 50%; }
