--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,8 +2,15 @@
 ---
 
 @import "{{ site.theme }}";
-btn-nav { text-decoration: none; display: inline-block; padding: 8px 16px; }
 btn-nav:hover { background-color: #ddd; color: black; } 
-.previous { background-color: #f1f1f1; color: black; } 
-.next { background-color: #4CAF50; color: white; } 
+.previous { 
+    background-color: #f1f1f1; color: black;
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 16px;} 
+.next { background-color: #4CAF50; color: white;
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 16px;
+} 
 .round { border-radius: 50%; }
