--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,7 +22,7 @@ btn-nav:hover { background-color: #ddd; color: black; }
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #4CAF50;
+    background-color: #1e6bb8;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -32,7 +32,7 @@ btn-nav:hover { background-color: #ddd; color: black; }
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
-    color: #4CAF50;
+    color: #FFFFFF;
     display: block;
     transition: 0.3s;
 }
