--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,7 +22,7 @@ btn-nav:hover { background-color: #ddd; color: black; }
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #f1f1f1;
+    background-color: #4CAF50;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
