--- a/_includes/laravel_nav.html
+++ b/_includes/laravel_nav.html
@@ -1,9 +1,9 @@
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="/laravel/introduction">Introduction</a>
-  <a href="laravel/what_is_laravel">What is laravel</a>
-  <a href="/laravel/setting-up">Setting up</a>
-  <a href="/laravel/controller">Controller</a>
+  <a href="/introduction">Introduction</a>
+  <a href="/what_is_laravel">What is laravel</a>
+  <a href="/setting-up">Setting up</a>
+  <a href="/controller">Controller</a>
 </div>
 
 <script>
