--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,6 @@
 {% endif %}
 {% if page.previous and page.previous.categories contains page.category %}
 
-  <a href="{{ page.previous.url }}" style="float: right;">Previous Post <br>
+  <a href="{{ page.previous.url }}" style="float: left;">Previous Post <br>
    {{page.previous.title}}</a>
 {% endif %}
